--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,6 +5,7 @@
   font-family: 'roboto', sans-serif;
   font-weight: 400;
   outline: none;
+  list-style: none;
 }
  
 h1 h2 {
@@ -40,9 +41,12 @@ form button{
 }
 
 .navbar .list {
-  align-items: center;
+  display: flex;
+  gap: 1rem;
 }
-
+.navbar .list li {
+  width: max-content;
+}
 
 button{
   border-radius: 2rem;
