--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,31 +8,14 @@
   list-style: none;
 }
  
-h1 h2 {
-  font-size: 24pt;
-  font-weight: 800;
+.header {
+  position: sticky;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  background-color: #3C4445;
+  z-index: 10000; /* sirve para sobreponer ante todo*/
 }
-body{
-  background:radial-gradient( #3C4445, #B0C4B1);
-  color: #F7E1D7;
-}
-
-main section h2{
-  color: #D8AB8E;
-}
-nav button{
-  background-color: transparent;
-  color: #F7E1D7;
-}
-main section button{
-  background-color: transparent;
-  color: #F7E1D7;
-}
-form button{
-  color: #000000;
-  background-color: #D8AB8E;
-}
-
 .header .navbar {
   display: flex;
   justify-content: space-between;
@@ -47,16 +30,31 @@ form button{
 .navbar .list li {
   width: max-content;
 }
+nav button{
+  background-color: transparent;
+  color: #F7E1D7;
+}
+main section button{
+  background-color: transparent;
+  color: #F7E1D7;
+}
 
-button{
+.button {
   border-radius: 2rem;
   border: solid 2px;
   background-color: transparent;
   padding: 1rem;
-  transition: 1s ease-in
+  transition: background-color 2s;
 }
 
+.button:hover {
+  background-color: #B0C4B1;
+}
 
+body{
+  background:radial-gradient( #3C4445, #B0C4B1);
+  color: #F7E1D7;
+}
 
 .jumbotron {
   
@@ -71,63 +69,56 @@ button{
   margin-bottom: 16pt;
 }
 
+img{
+  border-radius: 20%;
+  object-fit: cover;
+  transition: transform 1s ease-in-out;
+}
+  
+img:hover {
+    transform: scale(1.2);
+   }
+.images {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 1rem 30px;
+  align-items: center;
+}
+  
+h1 h2 h3 h4 {
+  font-size: 24pt;
+  font-weight: 800;
+}
+
+main section h2{
+  color: #D8AB8E;
+}
+
+.right {
+  text-align: right
+}
+
 section {
+  padding: 12pt 30px;
   perspective: 1000px
 }
-.box1 {
-transition: 1s ease;
-}
-.box:hover {
-  transform: rotateX('60')
-}
-
-
-.header {
-   position: sticky;
-   top: 0%;
-   left: 0%;
-   width: 100%;
-   background-color: #3C4445;
-   z-index: 10000; /* sirve para sobreponer ante todo*/
-  
-
-}
-
-
-section{
-  padding: 12pt 30px;
-}
-
 div {
   padding: 12pt 30px;
 }
 
-  /*
-  -Niveles de Especificidad
+form button{
+  color: #000000;
+  background-color: #D8AB8E;
+}
 
-1.- !important
-2.- id
-3.- class
-4.- tag
-5.- *
-
-  -Medidas 
-  FIJAS
-  *pixeles
-  *EM y REM
-  RESPONSIVAS
-  *porcentaje %
-  *Viewport Width y Height
-  COLOR
-  * Exadecimal
-  * RGB
-  * HSL
+.footer .navbar2 {
+  background-color: #3C4445;
+  display: flex;
+  justify-content: space-between;
+  padding: 12;
+  align-items: center;
+}
   
-  -Otros
-text-align: justify
-color: #ee8181c3;
-font-size: 1.7rem;
-font-family: Arial, Helvetica, sans-serif;
-font-weight: 900;
-
-  */
+.navbar2 .list2 {
+  width: max-content;
+}
