--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,6 +8,15 @@
   list-style: none;
 }
  
+body{
+  background: linear-gradient(145deg, #3C4445, #B0C4B1);
+  color: #F7E1D7;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.logo{
+  border-radius: 5%;
+}
 .header {
   position: sticky;
   top: 0%;
@@ -51,26 +60,34 @@ main section button{
   background-color: #B0C4B1;
 }
 
-body{
-  background: linear-gradient(145deg, #3C4445, #B0C4B1);
-  color: #F7E1D7;
-}
-
 .jumbotron {
   
   text-align: center;
   padding: 40pt;
 }
 .jumbotron h1 {
-  margin-bottom: 8pt;
+  margin-bottom: 10pt;
 }
 
 .jumbotron p{
   margin-bottom: 16pt;
+  margin-left:  6rem;
+  margin-right: 6rem;
+}
+
+h1{
+  font-size: 20pt;
+  font-weight: 550;
+}
+h2{
+  font-size: 18pt;
+  font-weight: 550;
+  padding-bottom: 1rem;
+  
 }
 
 img{
-  border-radius: 15%;
+  border-radius: 30px 30px 30px 30px;
   object-fit: cover;
   transition: transform 1s ease-in-out;
 }
@@ -81,35 +98,15 @@ img:hover {
 .images {
   display: flex;
   justify-content: space-evenly;
-  padding: 1rem 30px;
+  padding: 0 180px;
   align-items: center;
 }
 
 .images ul {
-  border-radius: 0%;
-display: grid;
-gap: 1rem;
-
-}
-.imagesdown{
   display: grid;
-  justify-items: center;
-  padding: 1rem 30px;
-  align-items: center;
+  gap: 2rem;
 }
 
-.imagesdown ul{
-  display: flex;
-  gap: 1rem;
-  justify-content: center;
-  padding: 1rem 30px;
-  align-items: center;
-}
-  
-h1 h2 h3 h4 {
-  font-size: 24pt;
-  font-weight: 800;
-}
 
 main section h2{
   color: #D8AB8E;
@@ -135,6 +132,26 @@ div {
   padding: 12pt 30px;
 }
 
+.imagesdown{
+  display: grid;
+  justify-items: center;
+  padding: 1rem 30px;
+  align-items: center;
+}
+
+.imagesdown ul{
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  padding: 1rem 30px;
+  align-items: center;
+}
+  
+footer section{
+  margin-left: 6rem;
+  margin-right: 6rem;
+  margin-bottom: 3rem;
+}
 form button{
   color: #000000;
   background-color: #D8AB8E;
@@ -150,4 +167,16 @@ form button{
   
 .navbar2 .list2 {
   width: max-content;
+}
+
+.button- {
+  border-radius: 2rem;
+  border: solid 2px white;
+  background-color: #D8AB8E;
+  padding: 1rem;
+  transition: background-color 2s;
+}
+
+.button-:hover {
+  background-color: #B0C4B1;
 }
